add template, static path, make site4.html

--- a/templates/site3.html
+++ b/templates/site3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
 <head>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="/css/master2.css">
     <meta charset="utf-8">
     <title>Работа с гиперссылками</title>
 </head>
@@ -27,7 +27,7 @@
 </div>
 
 <h1 name="decepticons" align="center"><a name="decepticons"></a>Десептиконы</h1>
-<h2 align="center"><img align="center" name="decepticons" src="../static/source/decp.jpe" width="200" height="300"
+<h2 align="center"><img align="center" name="decepticons" src="static/source/decp.jpe" width="200" height="300"
                         alt="No."></h2>
 <div class="autobots">
     Десептиконы — фракция трансформеров, оппозиционная к автоботам. Главной целью десептиконов являлся
@@ -38,7 +38,7 @@
 </div>
 
 <h1 name="autobots" align="center"><a name="linux"></a>Linux</h1>
-<h2 align="center"><img align="center" name="autobots" height="300" width="250" src="../static/source/linux.jpg"
+<h2 align="center"><img align="center" name="autobots" height="300" width="250" src="static/source/linux.jpg"
                         alt="No."></h2>
 <div class="autobots">
     Ли́нукс (Linux, Линакс, Линекс, Люнекс, Линупс, Лялех, Прыщеблядикс) — операционная система GNU/Linux.
@@ -51,7 +51,7 @@
 
 
 <h1 name="autobots" align="center"><a name="lurk"></a>Луркоморье</h1></h1>
-<h2 align="center"><img align="center" name="kibertron" width="250" height="250 " src="../static/source/lurk.png"
+<h2 align="center"><img align="center" name="kibertron" width="250" height="250 " src="static/source/lurk.png"
                         alt="No."></h2>
 <div class="autobots">
     Луркоморье, оно же Lurkmore — русскоязычная энциклопедия фольклора и субкультур.
@@ -61,7 +61,7 @@
 </div>
 
 <h1 name="autobots" align="center"><a name="kbtr"></a>Кибертрон</h1>
-<h2 align="center"><img align="center" width="350" height="300" name="autobots" src="../static/source/kbtr.jpe"
+<h2 align="center"><img align="center" width="350" height="300" name="autobots" src="static/source/kbtr.jpe"
                         alt="No."></h2>
 <div class="autobots">
     Кибертрон (англ. Cybertron) — механическая планета в системе Альфы Центавра; иногда изображается как блуждающая
